@@ -16,17 +16,19 @@ end
 -- check # of output slots if recipe is enabled
 if settings.startup['sr:scrap_recycling'].value then
   local recipe = data.raw.recipe['scrap-recycling']
-  local category = recipe and recipe.category
-  local max_results = table_size(recipe.results or {})
+  if recipe then
+    local category = recipe and recipe.category
+    local max_results = table_size((recipe or {}).results or {})
 
-  for _, furnace in pairs(data.raw.furnace) do
-    local upscale = false
-    for _, cat in pairs(furnace.crafting_categories or {}) do
-      upscale = upscale or (cat == category)
-    end
+    for _, furnace in pairs(data.raw.furnace) do
+      local upscale = false
+      for _, cat in pairs(furnace.crafting_categories or {}) do
+        upscale = upscale or (cat == category)
+      end
 
-    if upscale then
-      furnace.result_inventory_size = max_results
+      if upscale then
+        furnace.result_inventory_size = max_results
+      end
     end
   end
 end
