@@ -14,4 +14,4 @@
   sr:scrap_recycling=Enable scrap recycling
 
 [mod-setting-description]
-  sr:scrap_recycling=If enabled, scrap mining gives 'Scrap' item out, which needs to be recycled/smelted into its subcomponents
+  sr:scrap_recycling=If enabled, scrap mining gives 'Scrap' item out, which needs to be recycled/smelted into its subcomponents.
